apps/clothesshop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clothesshop
spec:
  selector:
    app: clothesshop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
