apps/clothesshop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clothesshop
  namespace: clothesshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ec2-3-84-72-8.compute-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clothesshop
                port:
                  number: 80
